# wgpu-rs-demo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
src/: alloc.rs  lib.rs  main.rs  utils.rs
src/core/: color.rs  core.rs  fullscreen.rs  mod.rs  node.rs  position.rs  size.rs  vsync.rs
src/engine/: engine.rs
src/error/: mod.rs
src/graphics/: mod.rs  shader.wgsl
src/input/: mod.rs
src/logger/: mod.rs
src/save_manager/: mod.rs
src/sound/: mod.rs
